--- a/src/app/virtualRoom/virtualRoom.component.html
+++ b/src/app/virtualRoom/virtualRoom.component.html
@@ -8,14 +8,14 @@
             <span class="badge badge-lg badge-success mr-2">
               <h5 class="font-weight-bold m-0 text-white">Virtual Room</h5>
             </span>
-            <button type="button" class="btn btn-soft-primary btn-icon-only" (click)="modalEvent('modalDeleteVR')">
+            <button *ngIf="vrInfo[0].vrHost == publicAuth.studentID" type="button" class="btn btn-soft-primary btn-icon-only" (click)="modalEvent('modalDeleteVR')">
               <span class="btn-inner--icon">
                 <i class="fas fa-trash-alt"></i>
               </span>
             </button>
           </div>
           <!-- <h5 class="font-weight-bold m-0"><i class="fas fa-users mr-2"></i>Virtual Room</h5> -->
-          <h1 class="font-weight-bold m-0 hover-scale-110">107821</h1>
+          <h1 class="font-weight-bold m-0 hover-scale-110">{{ vrInfo[0].vrCode }}</h1>
         </div>
         <div class="card-body">
           <small class="h6 text-sm font-weight-bold">Reminder:</small>
@@ -31,7 +31,7 @@
         </div>
         <div class="card-body">
           <small class="h6 text-sm font-weight-bold">Room Capacity:</small>
-          <p class="text-sm lh-160 mb-3">3</p>
+          <p class="text-sm lh-160 mb-3">{{ vrInfo[0].vrCapacity }}</p>
           <small class="h6 text-sm font-weight-bold">Host:</small>
           <div class="card mb-3 bg-gray-400 border-0">
             <div class="card-body">
@@ -80,7 +80,7 @@
       </div>
     </div>
 
-    <!-- <div class="col-8">
+    <div *ngIf="vrInfo[0].vrHost == publicAuth.studentID && vrInfo[0].vrCapacity == vrInfo[0].currentCapacity" class="col-8">
       <div class="card">
         <div class="card-body">
           <h6 class="mb-4">Step 1: Choose a village</h6>
@@ -178,15 +178,27 @@
           </div>
         </div>
       </div>
-    </div> -->
+    </div>
 
-    <div class="col-8">
+    <div *ngIf="vrInfo[0].vrHost != publicAuth.studentID" class="col-8">
       <div class="card overflow-hidden border-0">
         <img alt="Image placeholder" src="../../assets/img/theme/light/img-2.jpg" class="card-img-top">
         <span class="mask bg-brown opacity-9"></span>
         <div class="card-img-overlay d-flex flex-column">
           <div class="my-auto text-center px-3 py-5">
             <h3 class="text-white hover-scale-110 mb-0">Only the host is able to proceed with room booking.</h3>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div *ngIf="vrInfo[0].vrHost == publicAuth.studentID && vrInfo[0].vrCapacity != vrInfo[0].currentCapacity" class="col-8">
+      <div class="card overflow-hidden border-0">
+        <img alt="Image placeholder" src="../../assets/img/theme/light/img-2.jpg" class="card-img-top">
+        <span class="mask bg-success opacity-9"></span>
+        <div class="card-img-overlay d-flex flex-column">
+          <div class="my-auto text-center px-3 py-5">
+            <h3 class="text-white hover-scale-110 mb-0">The host will be allowed to proceed with room booking<br>only when the room is full.</h3>
           </div>
         </div>
       </div>
