--- a/src/app/moduleBooking/bulkBooking/bulkBooking.component.html
+++ b/src/app/moduleBooking/bulkBooking/bulkBooking.component.html
@@ -137,3 +137,31 @@
     </div>
   </div>
 </div>
+
+<div class="modal modal-danger bg-translucent-dark fade" id="modalroomFullError" tabindex="-1" role="dialog">
+  <div class="modal-dialog modal-dialog-centered" role="document" data-backdrop="false">
+    <div class="modal-content">
+      <div class="modal-body">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span class="h4" aria-hidden="true">&times;</span>
+        </button>
+        <h5 class="text-center text-white my-4"><i class="fas fa-sad-cry fa-4x"></i></h5>
+        <h5 class="modal-title text-center mb-4" id="myLargeModalLabel">Opps, the room is full.</h5>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="modal modal-danger bg-translucent-dark fade" id="modalroomNotFound" tabindex="-1" role="dialog">
+  <div class="modal-dialog modal-dialog-centered" role="document" data-backdrop="false">
+    <div class="modal-content">
+      <div class="modal-body">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span class="h4" aria-hidden="true">&times;</span>
+        </button>
+        <h5 class="text-center text-white my-4"><i class="fas fa-heart-broken fa-4x"></i></h5>
+        <h5 class="modal-title text-center mb-4" id="myLargeModalLabel">Opps, room not found.</h5>
+      </div>
+    </div>
+  </div>
+</div>
