--- a/src/app/wrapper/header/header.component.html
+++ b/src/app/wrapper/header/header.component.html
@@ -13,6 +13,11 @@
                             <span>Home</span>
                         </a>
                     </li>
+                    <li class="nav-item mr-4 font-weight-bold">
+                        <a href="javascript:void(0)" class="text-white h6" [routerLink]="['/floorPlan']">
+                            <span>Floor Plan</span>
+                        </a>
+                    </li>
                     <li *ngIf="bookingHistoryCount > 0" class="nav-item mr-4 font-weight-bold">
                         <a href="javascript:void(0)" class="text-white h6" [routerLink]="['/history']">
                             <span>History</span>
