--- a/src/app/history/history.component.html
+++ b/src/app/history/history.component.html
@@ -4,7 +4,7 @@
     <div class="col-4">
       <div class="card hover-shadow-lg">
         <div class="card-header">
-          <h5 class="font-weight-bold m-0"><i class="fas fa-check-circle mr-2"></i>Current Booking</h5>
+          <h5 class="font-weight-bold m-0"><i class="fas fa-check-circle mr-2"></i>Recent Booking</h5>
         </div>
         <div class="card-body">
           <div class="row">
@@ -40,7 +40,7 @@
                 <span
                   class="avatar rounded-circle avatar-lg bg-primary text-white font-weight-bold hover-shadow-lg hover-scale-110">{{ m.bed }}</span>
                 <div class="avatar-content ml-3">
-                  <h5 class="mb-0 font-weight-bold">{{ m.studentName }}</h5>
+                  <h5 class="mb-0 font-weight-bold">{{ m.studentName | uppercase }}</h5>
                   <small class="d-block text-muted font-weight-bold">Email: {{ m.studentEmail }}</small>
                   <small class="d-block text-muted font-weight-bold">Phone: {{ m.studentContact }}</small>
                 </div>
