--- a/src/app/virtualRoom/virtualRoom.component.html
+++ b/src/app/virtualRoom/virtualRoom.component.html
@@ -15,7 +15,10 @@
             </button>
           </div>
           <!-- <h5 class="font-weight-bold m-0"><i class="fas fa-users mr-2"></i>Virtual Room</h5> -->
-          <h1 class="font-weight-bold m-0 hover-scale-110">{{ vrInfo[0].vrCode }}</h1>
+          <div class="text-right">
+            <h1 class="font-weight-bold m-0 hover-scale-110 lh-100">{{ vrInfo[0]?.vrCode }}</h1>
+            <p class="m-0 text-sm font-weight-600 text-success">{{ vrInfo[0]?.vrPassword }}</p>
+          </div>
         </div>
         <div class="card-body">
           <small class="h6 text-sm font-weight-bold">Reminder:</small>
@@ -31,7 +34,7 @@
         </div>
         <div class="card-body">
           <small class="h6 text-sm font-weight-bold">Room Capacity:</small>
-          <p class="text-sm lh-160 mb-3">{{ vrInfo[0].vrCapacity }}</p>
+          <p class="text-sm lh-160 mb-3">{{ vrInfo[0]?.vrCapacity }}</p>
           <small class="h6 text-sm font-weight-bold">Host:</small>
           <div class="card mb-3 bg-gray-400 border-0">
             <div class="card-body">
@@ -39,39 +42,25 @@
                 <span
                   class="avatar rounded-circle avatar-lg bg-primary text-white font-weight-bold hover-shadow-lg hover-scale-110">1</span>
                 <div class="avatar-content ml-3">
-                  <h5 class="mb-0 font-weight-bold">CHOY SHAO KEAT</h5>
+                  <h5 class="mb-0 font-weight-bold">{{ vrHostInfo[0]?.studentName | uppercase }}</h5>
                   <small class="d-block text-muted font-weight-bold">Email:
-                    choyshaokeat@utp.edu.my</small>
-                  <small class="d-block text-muted font-weight-bold">Phone: 010-1234567</small>
+                    {{ vrHostInfo[0]?.studentEmail }}</small>
+                  <small class="d-block text-muted font-weight-bold">Phone: {{ vrHostInfo[0]?.studentContact }}</small>
                 </div>
               </div>
             </div>
           </div>
           <small class="h6 text-sm font-weight-bold">Roommates joined:</small>
-          <div class="card mb-2 bg-gray-400 border-0">
+          <div *ngFor="let m of vrRoommatesInfo; let i = index" class="card mb-2 bg-gray-400 border-0">
             <div class="card-body">
               <div class="d-flex align-items-center">
                 <span
-                  class="avatar rounded-circle avatar-lg bg-primary text-white font-weight-bold hover-shadow-lg hover-scale-110">2</span>
+                  class="avatar rounded-circle avatar-lg bg-primary text-white font-weight-bold hover-shadow-lg hover-scale-110">{{ i+2 }}</span>
                 <div class="avatar-content ml-3">
-                  <h5 class="mb-0 font-weight-bold">CHOY SHAO KEAT</h5>
+                  <h5 class="mb-0 font-weight-bold">{{ m.studentName | uppercase }}</h5>
                   <small class="d-block text-muted font-weight-bold">Email:
-                    choyshaokeat@utp.edu.my</small>
-                  <small class="d-block text-muted font-weight-bold">Phone: 010-1234567</small>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="card mb-2 bg-gray-400 border-0">
-            <div class="card-body">
-              <div class="d-flex align-items-center">
-                <span
-                  class="avatar rounded-circle avatar-lg bg-primary text-white font-weight-bold hover-shadow-lg hover-scale-110">3</span>
-                <div class="avatar-content ml-3">
-                  <h5 class="mb-0 font-weight-bold">HOR KAH WAI</h5>
-                  <small class="d-block text-muted font-weight-bold">Email:
-                    horkahwai@utp.edu.my</small>
-                  <small class="d-block text-muted font-weight-bold">Phone: 010-1234567</small>
+                    {{ m.studentEmail }}</small>
+                  <small class="d-block text-muted font-weight-bold">Phone: {{ m.studentContact }}</small>
                 </div>
               </div>
             </div>
