--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <ngx-spinner bdColor="rgba(51,51,51,0.8)" size="medium" color="#fff" type="ball-scale-multiple">
 </ngx-spinner>
 <router-outlet (activate)="onActivate($event)"></router-outlet>
+<!-- <app-header *ngIf="loginStatus==true"></app-header> -->
 
 <section id="popUp">
   <div class="modal fade" id="loginOption">
