--- a/src/app/floorPlan/floorPlan.component.html
+++ b/src/app/floorPlan/floorPlan.component.html
@@ -16,7 +16,7 @@
     <div class="col-11">
       <div class="tab-content" id="myTabContent">
         <div class="tab-pane fade show active" id="v1" role="tabpanel">
-          <div class="card px-3">
+          <div class="card hover-shadow-lg px-3">
             <div class="card-body">
               <h1 class="mb-4 font-weight-bold underline">V1 Floor Plan</h1>
               <img alt="Image placeholder" src="../../assets/img/floorplan/v1/V1A.jpg" style="width:1000px"
@@ -31,7 +31,7 @@
           </div>
         </div>
         <div class="tab-pane fade" id="v2" role="tabpanel">
-          <div class="card px-3">
+          <div class="card hover-shadow-lg px-3">
             <div class="card-body">
               <h1 class="mb-4 font-weight-bold underline">V2 Floor Plan</h1>
               <img alt="Image placeholder" src="../../assets/img/floorplan/v2/V2A.jpg" style="width:1000px"
@@ -48,7 +48,7 @@
           </div>
         </div>
         <div class="tab-pane fade" id="v3" role="tabpanel">
-          <div class="card px-3">
+          <div class="card hover-shadow-lg px-3">
             <div class="card-body">
               <h1 class="mb-4 font-weight-bold underline">V3 Floor Plan</h1>
               <img alt="Image placeholder" src="../../assets/img/floorplan/v3/V3A1.jpg" style="width:1000px"
@@ -65,7 +65,7 @@
           </div>
         </div>
         <div class="tab-pane fade" id="v4" role="tabpanel">
-          <div class="card px-3">
+          <div class="card hover-shadow-lg px-3">
             <div class="card-body">
               <h1 class="mb-4 font-weight-bold underline">V4 Floor Plan</h1>
               <img alt="Image placeholder" src="../../assets/img/floorplan/v4/V4A1.jpg" style="width:1000px"
@@ -82,7 +82,7 @@
           </div>
         </div>
         <div class="tab-pane fade" id="v5" role="tabpanel">
-          <div class="card px-3">
+          <div class="card hover-shadow-lg px-3">
             <div class="card-body">
               <h1 class="mb-4 font-weight-bold underline">V5 Floor Plan</h1>
               <img alt="Image placeholder" src="../../assets/img/floorplan/v5/1.jpg" style="width:1000px"
@@ -113,7 +113,7 @@
           </div>
         </div>
         <div class="tab-pane fade" id="v6" role="tabpanel">
-          <div class="card px-3">
+          <div class="card hover-shadow-lg px-3">
             <div class="card-body">
               <h1 class="mb-4 font-weight-bold underline">V6 Floor Plan</h1>
               <img alt="Image placeholder" src="../../assets/img/floorplan/v6/1.jpg" style="width:1000px"
