--- a/src/app/wrapper/header/header.component.html
+++ b/src/app/wrapper/header/header.component.html
@@ -29,7 +29,7 @@
                     </li>
                     <li class="nav-item">
                         <button class="btn btn-sm btn-soft-secondary text-primary rounded-pill my-auto font-weight-bold"
-                            [disabled]="publicAuth.bookingStatus == 1" (click)="modalEvent('modalBook')">Book now</button>
+                            [disabled]="publicAuth.bookingStatus > 0" (click)="modalEvent('modalBook')">Book now</button>
                     </li>
                 </ul>
                 <ul class="navbar-nav ml-lg-auto d-none d-lg-flex">
